<resources>
    <string name="app_name">BarberShopFlores</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--login-->
    <string name="email">Ingrese email</string>
    <string name="password">Ingrese contraseña</string>
    <string name="login_button_login">INICIAR SESION</string>
    <string name="register">¿Aun no te has Registrado?</string>
    <string name="user">Usuario</string>

    <!--register -->
    <string name="name_user">Nombre de usuario</string>
    <string name="register_email">Ingrese email</string>
    <string name="register_password">Ingrese contraseña</string>
    <string name="repeat_password">Repita su contraseña</string>
    <string name="button_register_user">Registrar</string>
    <string name="button_create_user">CREAR CUENTA</string>
    <string name="go_to_login">¿tienes una cuenta? inicia sesion</string>
    <string name="enter_email">Ingresa email</string>
    <string name="enter_password">Ingrese contraseña</string>

    <!--header-->
    <string name="login_tittle">Login</string>
    <string name="login_sub_tittle">Ingresa y reserva tu cita</string>
    <string name="create_user_tittle">Crear cuenta</string>
    <string name="welcome_sub_tittle">Bienvenidos a aPPmovie</string>
    <string name="profile_tittle">aPPmovie</string>
    <string name="register_sub_tittle">Registrate y descubre la excelencia en barbers</string>

    <!--error-->
    <string name="passwords_not_match">contraseña no coincide</string>
    <string name="login_error_mail">ingrese un email valido</string>
    <string name="login_error_password">"ingrese minimo 8 digitos"</string>
    <string name="enter_data">Ingrese los datos requeridos</string>
    <string name="register_error_mail">debe ingresar un Email valido</string>
    <string name="register_error_password">debe contener al menos 8 Digitos</string>
    <string name="repeat_error_password">contraseñas no coinciden</string>
    <string name="invalid_email">"email invalido"</string>
    <string name="invalid_password">Contraseña invalida</string>
    <string name="enter_name_user">ingrese minimo 6 caracteres</string>
    
    <!--barbers-->
    <string name="close_session">Cerrar Sesion</string>
    <string name="barbe_info">Barbería de tradición y estilo, donde la maestría se encuentra con la modernidad. Expertos en cortes de tendencia y afeitados impecables. Tu experiencia de cuidado personal, única y auténtica. ¡Bienvenido a nuestra familia de la barbería!</string>
    <string name="default_web_client_id">761759972528-hpc4eqe9se7133dnmu6cupjj0q2h7q30.apps.googleusercontent.com</string>
    <string name="agenda_tu_cita">Agenda tu Cita</string>
    <string name="select_barber">Select Barber</string>
    <string name="selecciona_la_fecha">Selecciona la Fecha</string>
    <string name="selecciona_la_hora">Selecciona la Hora</string>
    <string name="agendar">Agendar</string>
    <string name="tus_citas">Tus Citas</string>
    <string name="consulta_tus_citas">Consulta tus citas</string>
    <string name="recover_your_password">Recupera tu Contraseña</string>
    <string name="text_info_pass">Ingresa tu cuenta para recibir un correo con la confirmacion del cambio de contraseña</string>
    <string name="send">ENVIAR</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="catalogo_de_cortes">Catalogo de Cortes</string>
    <string name="genera_tu_cita">GENERA TU CITA</string>
    <string name="ingresa_con_email">INGRESA CON EMAIL</string>
    <string name="ingresa_con_google">INGRESA CON GOOGLE</string>
    <string name="crear_nueva_cuenta">Crear nueva Cuenta</string>
    <string name="barber_jesus">Barber Jesus</string>
    <string name="barber">barber</string>
    <string name="day">Dia</string>
    <string name="hour">hora</string>
    <string name="registro_de_clientes">Registro de clientes</string>
    <string name="acerca_de">Acerca de</string>
    <string name="text_info">Lo que somos!!</string>
    <string name="home">Home</string>
    <string name="mis_citas">Mis citas</string>
    <string name="info">Info</string>
    <string name="consulta_cita">CONSULTA TUS CITAS</string>
    <string name="barber_shop_flores">BarberShop Flores</string>
    <string name="barber_shop_subtittle">Vive la expriencia de un servicio de calidad brindado por los mejores barberos de la zona este.</string>
    <string name="selecciona_tu_barbero">Selecciona tu Barbero</string>
    <string name="jesus">Jesus</string>
    <string name="nombre_jesus">Jesus</string>
    <string name="Estadodelacita">Estado de la cita</string>
    <string name="state_of_the_appointment">Estado de la cita</string>
    <string name="message_sucessfull">Cita creada exitosamente, revisa tu apartado de citas</string>
    <string name="confirm">Aceptar</string>

    <string name="client_label">Cliente: %s</string>
    <string name="barber_label">Barbero: %s</string>
    <string name="date_label">Fecha: %s</string>
    <string name="hour_label">Hora: %s</string>

</resources>