<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.authView.ForgotPasswordFragment">

    <FrameLayout
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/blackopsone"
            android:text="@string/recover_your_password"
            android:textColor="@color/secondary"
            android:textSize="22sp" />

    </FrameLayout>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/subTittle"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:padding="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/cv_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:shapeAppearanceOverlay="@style/circular"
        app:srcCompat="@drawable/barber_ic"
        app:strokeColor="@color/secondary"
        app:strokeWidth="3dp" />



    <androidx.cardview.widget.CardView
        android:id="@+id/cv_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="26dp"
        app:cardElevation="8dp"
        android:backgroundTint="@color/primaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical">

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:gravity="center"
        android:textColor="@color/secondary"
        android:fontFamily="@font/handlee"
        android:textSize="16sp"
        android:text="@string/text_info_pass" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/FormTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:helperText="Requerido"
        app:helperTextTextColor="@color/white"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_Et"
            style="@style/FormEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/btn_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgot_pass_btn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:textColor="@color/secondary"
            app:cornerRadius="30dp"
            app:strokeColor="@color/secondary"
            android:fontFamily="@font/blackopsone"/>

        <ProgressBar
            android:id="@+id/forgotPassProgress"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/secondary"
            android:visibility="invisible" />

    </RelativeLayout>

    </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>