<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryDark"
        android:orientation="vertical"
        tools:context=".view.Scheduling">


        <TextView
            android:id="@+id/text_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/blackopsone"
            android:gravity="center"
            android:text="@string/agenda_tu_cita"
            android:textColor="@color/secondary"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_barbers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_tittle" />


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/barber1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/handlee"
                android:padding="4dp"
                android:text="@string/select_barber"
                android:textColor="@color/secondary"
                android:textStyle="bold"
                app:buttonTint="@color/secondary" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/barber2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/handlee"
                android:padding="4dp"
                android:text="@string/select_barber"
                android:textColor="@color/secondary"
                android:textStyle="bold"
                app:buttonTint="@color/secondary" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/barber3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/handlee"
                android:padding="4dp"
                android:text="@string/select_barber"
                android:textColor="@color/secondary"
                android:textStyle="bold"
                app:buttonTint="@color/secondary" />

        </RadioGroup>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:cardBackgroundColor="@color/black">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/handlee"
                android:gravity="center"
                android:text="@string/selecciona_la_fecha"
                android:textColor="@color/secondary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.cardview.widget.CardView>

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F6D2C7"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:cardBackgroundColor="@color/black">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/handlee"
                android:gravity="center"
                android:text="@string/selecciona_la_hora"
                android:textColor="@color/secondary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.cardview.widget.CardView>

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_citas"
            android:timePickerMode="spinner" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/secondary"
            android:visibility="invisible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAgendar"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:fontFamily="@font/blackopsone"
            android:text="@string/agendar"
            android:textColor="@color/secondary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="30dp"
            app:strokeColor="@color/secondary" />

    </LinearLayout>

</ScrollView>