<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDark"
    tools:context=".ui.authView.login.LoginFragment">

    <include
        android:id="@+id/viewHeader"
        layout="@layout/view_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/subTittle"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:padding="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/cv_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHeader"
        app:shapeAppearanceOverlay="@style/circular"
        app:srcCompat="@drawable/barber_ic"
        app:strokeColor="@color/secondary"
        app:strokeWidth="3dp" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#0E0E0E"
        app:cardCornerRadius="26dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="80dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="@style/FormTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:helperText="Requerido"
                app:helperTextTextColor="@color/white"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    style="@style/FormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/FormTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/password"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:helperText="Requerido"
                app:helperTextTextColor="@color/white"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    style="@style/FormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/btn_layout"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="16dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/blackopsone"
                    android:text="@string/login_button_login"
                    android:textColor="@color/secondary"
                    app:cornerRadius="30dp"
                    app:strokeColor="@color/secondary" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_centerInParent="true"
                    android:indeterminateTint="@color/secondary"
                    android:visibility="invisible" />

            </RelativeLayout>

            <TextView
                android:id="@+id/forgotPassLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:gravity="center"
                android:text="@string/recover_your_password"
                android:textSize="16sp"
                android:padding="8dp"
                android:fontFamily="@font/handlee"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

